<resources>
    <string name="str_players">Players</string>
    <string name="str_console">Console</string>
    <string name="str_editfile">Edit File</string>
    <string name="str_chat">Chat</string>
    <string name="str_plugin">Plugins</string>
    <string name="str_config">Config</string>
    <string name="str_server_information">Server Information</string>
    <string name="str_address">Address:</string>
    <string name="str_peoples">Players:</string>
    <string name="str_add_information">Additional Information</string>
    <string name="str_desc_launcher_icon">Icon</string>
    <string name="str_port">Port:</string>
    <string name="str_username">Username:</string>
    <string name="str_password">Password：</string>
    <string name="str_or">-OR-</string>
    <string name="str_login">Login</string>
    <string name="str_save_login">Save this login</string>
    <string name="str_new_connection">Create new connection</string>
    <string name="str_exist_connection">Use an existing connection</string>
    <string name="str_select_exist_connection">Saved connection</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_server_name">Server Name:</string>
    <string name="str_disconnect_by_network_reason">Has been disconnected.\n%1$s</string>
    <string name="str_disconnect_by_own">Disconnected.</string>
    <string name="str_send">Send</string>
    <string name="str_error_on_server_data">Can\'t get the data.</string>
    <string name="str_date">Date</string>
    <string name="str_log_level">Log level</string>
    <string name="str_general">General</string>
    <string name="str_donate">Donate</string>
    <string name="str_console_show_date">Show date</string>
    <string name="str_console_show_log_level">Show log level</string>
    <string name="str_ellipsize">Wrap lines</string>
    <string name="str_ellipsize_desc">Choose whether to wrap the case that can not be displayed on a single line.</string>
    <string name="str_starting_service">Starting service&#8230;</string>
    <string name="str_error_on_starting_service">Failed to start service.</string>
    <string name="str_error_on_handle">An error has occurred in handling.</string>
    <string name="str_move_bottom">Scroll to bottom</string>
    <string name="str_move_bottom_short">Move to bottom</string>
    <string name="str_console_move_bottom_desc"></string>
    <string name="str_chat_move_bottom_desc">Choose whether to scroll to the bottom when the console has been updated.</string>
    <string name="str_font_size">Fontsize</string>
    <string name="str_unit_dip">dip</string>
    <string name="str_icon">Icon</string>
    <string name="str_no_user_logged_in">No player has logged in.</string>
    <string name="str_loading">Losding&#8230;</string>
    <string name="str_handle">Handle</string>
    <string name="str_kick">Kick</string>
    <string name="str_ban">Ban</string>
    <string name="str_give">Give</string>
    <string name="str_gamemode_short">Mode</string>
    <string name="str_gamemode">Gamemode</string>
    <string name="str_confirm_kick">Do you kick the player \"%1$s\"?</string>
    <string name="str_confirm_ban">Do you ban the player \"%1$s\"?</string>
    <string-array name="strarr_gamemode">
        <item>Survival</item>
        <item>Creative</item>
        <item>Adventure</item>
    </string-array>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_reason">Reason</string>
    <string name="str_item">Item</string>
    <string name="str_num">Num</string>
    <string name="str_select_give_item">Please specify the quantity and the ID of the item.</string>
    <string name="str_select">Select</string>
    <string name="str_select_item">Select Item</string>
    <string name="str_ok">OK</string>
    <string name="str_input_item_id_or_name">Enter item name or ID</string>
    <string name="str_ID">ID:</string>
    <string name="str_no_data_found">There is no corresponding item.</string>
    <string name="str_not_auth">You are not logged in.</string>
    <string name="str_no_player">Player not found.</string>
    <string name="str_no_item">Item not found.</string>
    <string name="str_unknown_message">Not registered response.</string>
    <string name="str_success">Success!</string>
    <string name="str_exception">Exception</string>
    <string name="str_auth_error">Failed to authenticate.</string>
    <string name="str_not_recommended_server_continue">You\'re trying to connect to the server that is not the recommended version.\nDo you want to continue?</string>
    <string name="str_continue">Continue</string>
    <string name="str_disconnect">Disconnect</string>
    <string name="str_player_image_url">Player image URL</string>
    <string name="str_player_image_url_desc" formatted="false">The URL when you get the texture image of the player.\n\"%Player%\" is replaced by the player name.</string>
    <string name="str_directory">Directory:</string>
    <string name="str_save_and_close">Save and close</string>
    <string name="str_close_without_save">Close without saving</string>
    <string name="str_change_save_encoding">Change charset</string>
    <string name="str_charset">Charset</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_file_close_confirm_message">Do you want to save this file?</string>
    <string-array name="strarr_file_handle_directory">
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string-array name="strarr_file_handle_file">
        <item>Open</item>
        <item>Open with select charset</item>
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string name="str_input_new_name">Please enter a new name.</string>
    <string name="str_rename">Rename</string>
    <string name="str_delete">Delete</string>
    <string name="str_confirm_delete_file">Do you want to delete this file?</string>
    <string name="str_confirm_delete_directory">Do you want to delete this directory?</string>
    <string name="str_failed">Failed</string>
    <string name="str_mkdir">Make a directory</string>
    <string name="str_mkfile">Make a file</string>
    <string name="str_input_directory_name">Enter the directory name.</string>
    <string name="str_input_file_name">Enter the file name.</string>
    <string name="str_create">New</string>
    <string name="str_no_add_info">There is no additional information.</string>
    <string name="str_account_manager">Account manager</string>
    <string-array name="strarr_account_manager_handle">
        <item>Up</item>
        <item>Down</item>
        <item>Delete</item>
    </string-array>
    <string name="str_confirm_delete_account">Delete this account?</string>
    <string name="str_other">Other</string>
    <string name="str_about_this_app">About this app</string>
    <string name="str_dot">・</string>
    <string name="str_mail">Mail:</string>
    <string name="str_web">Web:</string>
    <string name="str_copyright_desc">This app is licensed under the following license.</string>
    <string name="str_use_libs">Also, I use following external library and resources.</string>
    <string name="str_press_color_to_apply">Press on Color to apply</string>
    <string name="str_dialog_color_picker">Color Picker</string>
    <string name="str_color_background">Backbround Color</string>
    <string name="str_color_font">Font Color</string>
    <string name="str_desc_console_background_color">Select console background color.</string>
    <string name="str_desc_console_font_color">Select console font color.</string>
    <string name="str_desc_console_font_size">Select console font size.</string>
    <string name="str_desc_chat_background_color">Select chat background color.</string>
    <string name="str_desc_chat_font_color">Select chat font color.</string>
    <string name="str_desc_chat_font_size">Select chat font size.</string>
    <string name="str_dynmap">Dynmap</string>
    <string name="str_log">Log</string>
    <string name="str_save_log">Save log</string>
    <string name="str_save_log_desc">Choose whether to save the log to file.</string>
    <string name="str_copy_log_dir">Copy log directory path</string>
    <string name="str_copied">Copied</string>
    <string name="str_cant_copy">Could\'t copy</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_status">Status:</string>
    <string name="str_enabled">Enabled</string>
    <string name="str_disabled">Disabled</string>
    <string name="str_view">View</string>
    <string name="str_enable">Enable</string>
    <string name="str_disable">Disable</string>
    <string name="str_no_plugin">Plugin not found.</string>
    <string name="str_plugin_already_enabled">Plugin has already enabled.</string>
    <string name="str_plugin_already_disabled">Plugin has already disabled.</string>
    <string name="str_name">Name:</string>
    <string name="str_version">Version:</string>
    <string name="str_author">Author:</string>
    <string name="str_commands">Commands</string>
    <string name="str_permissions">Permissions</string>
    <string name="str_alias">Aliases:</string>
    <string name="str_permission">Permission:</string>
    <string name="str_usage">Usage:</string>
    <string name="str_description">Description:</string>
    <string name="str_default">Default:</string>
    <string name="str_children">Children:</string>
    <string name="str_inherits">Inherits:</string>
    <string name="str_access_denied">Access denied</string>
    <string name="str_auto_update">Auto update</string>
    <string name="str_auto_update_desc">Connect to server automatically and check for any errors that may have occurred.\nRequired for wiget feature.</string>
    <string name="str_update_interval">Update interval:</string>
    <string name="str_minute">min</string>
    <string name="str_edit">Edit</string>
    <string name="str_save">Save</string>
    <string name="str_notification">Notification</string>
    <string name="str_summons">Summons</string>
    <string name="str_console_error">Console Error</string>
    <string name="str_unknown">Unknown</string>
    <string name="str_mark_as_read_all">Mark as read all</string>
    <string name="str_no_notification_unread">There is no unread notification</string>
    <plurals name="str_plurals_notification_unread">
        <item quantity="one">%1$d unread notification</item>
        <item quantity="other">%1$d unread notifications</item>
    </plurals>
    <string name="str_sound">Sound</string>
    <string name="str_sound_desc">Choose whether to notify with sound.</string>
    <string name="str_vibrate">Vibration</string>
    <string name="str_vibrate_desc">Choose whether to notify with vibration.</string>
    <string name="str_light">Light</string>
    <string name="str_light_desc">Choose whether to notify with light.</string>
    <string name="str_select_account">Select account</string>
    <string name="str_notification_widget">Notification:</string>
    <string name="str_widget_config">Widget configuration</string>
    <string name="str_desc_widget_background_color">Select widget background color.</string>
    <string name="str_desc_widget_font_color">Select widget font color.</string>
    <string name="str_appearance">Appearance</string>
    <string name="str_account">Account</string>
    <string name="str_server_online">○</string>
    <string name="str_server_offline">×</string>
    <string name="str_not_available">n/a</string>
    <string name="str_service_not_available">Service not available\nTap here to open configuration.</string>
    <string name="str_waiting_for_first_reception">Waiting for the first reception\nTap here to refresh immediately.</string>
    <string name="str_last_update">Updated:</string>
    <string name="str_not_select">Not selected</string>
</resources>