<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/edittext_player_give_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.36"
            android:ems="10"
            android:hint="@string/str_item"
            android:inputType="text"
            tools:ignore="NestedWeights" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_player_give_item_select"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_select" />
    </LinearLayout>

    <EditText
        android:id="@+id/edittext_player_give_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.00"
        android:ems="10"
        android:hint="@string/str_num"
        android:inputType="numberDecimal" />

</LinearLayout>