<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/const_text_plugin_handle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/str_handle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_plugin_handle_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/str_view"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_plugin_handle_enable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/str_enable"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_plugin_handle_disable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/str_disable"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>