<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dp" >

    <ListView
        android:id="@+id/list_auto_update_manager_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/const_text_auto_update_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_update_interval"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ViewSwitcher
            android:id="@+id/switcher_auto_update_interval"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/text_auto_update_interval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edittext_auto_update_interval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" >
            </EditText>
        </ViewSwitcher>

        <TextView
            android:id="@+id/const_text_auto_update_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_minute"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_auto_update_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_edit" />
    </LinearLayout>

</LinearLayout>